# RTOS_SP2023

./: README.md
assignments/: assign_5.txt
countTest/: 7seg  7segSim.c  hex  hexCnt.c
docs/: 7-Seg_Vid_Link.txt
notes/: Lecture_10.5.txt  RTOS_Feb_16.ipynb  notes_2-7
pico/: simple_freertos_README.txt
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/: 7seg_project_ver1.c  7seg_project_ver1.h  CMakeCache.txt  CMakeLists.txt  Makefile  V3-7SEGTEST.dis  V3-7SEGTEST.elf  V3-7SEGTEST.elf.map  V3-7SEGTEST.hex  V3-7SEGTEST.uf2  cmake_install.cmake  hdc1080.c  main.c  main.h  old7seg.c  test.c
pico/Vandalino3PicoTestSuite/V3-DIPSWITCHTEST/: CMakeCache.txt  CMakeLists.txt  Makefile  V3-DIPSWITCHTEST.dis  V3-DIPSWITCHTEST.elf  V3-DIPSWITCHTEST.elf.map  V3-DIPSWITCHTEST.hex  V3-DIPSWITCHTEST.uf2  cmake_install.cmake
pico/Vandalino3PicoTestSuite/V3-I2CHDC1080/: CMakeCache.txt  CMakeLists.txt  Makefile  V3-I2CHDC1080.dis  V3-I2CHDC1080.elf  V3-I2CHDC1080.elf.map  V3-I2CHDC1080.hex  V3-I2CHDC1080.uf2  cmake_install.cmake  hdc1080Drivers.h
pico/Vandalino3PicoTestSuite/V3-I2CSCANNER/: CMakeCache.txt  CMakeLists.txt  Makefile  (+6 more)
pico/script/: mini_com.sh
pico/simple_usb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exp.sh  main.c  simple_usb.dis  simple_usb.elf  simple_usb.elf.map  simple_usb.hex  simple_usb.uf2
pico/simple_usb/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
pico/simple_usb/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
pico/simple_usb/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
(+637 files in other folders)
